--- a/README.org
+++ b/README.org
@@ -32,8 +32,9 @@ vagrant up
 ** package newly provisioned box into a new base box
 #+BEGIN_SRC 
 # this will add rosbox into ~/.vagrant.d/boxes on the local host
+## make sure rox.box file is removed from vm dir
 vagrant package --output ros.box
-vagrant box add rosbox ros.box
+vagrant box add rosbox ros.box --force
 #+END_SRC
 
 ** init new Vagrant box:
