--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@
 
 * Description
 
-A base Vagrant VM provisioned with puppet and librarian-puppet. The VM
+A base Vagrant VM provisioned with ansible. The VM
 uses standard Debian precise64 box. It could be used as a base box for certain dev
 projects as it has provisioning for some basic tools.
 
