--- a/README.org
+++ b/README.org
@@ -70,3 +70,29 @@ config.vm.box = "vmbox"
 # this will create a Vagrantfile in the current dir:
 vagrant init vmbox
 #+END_SRC
+* Conda
+* Packer
+http://www.jeffgeerling.com/blog/server-vm-images-ansible-and-packer
+https://github.com/geerlingguy/packer-ubuntu-1404
+https://featheredtoast.wordpress.com/2013/10/14/vagrant-packer-ansible-arch-linux-virtualization-made-in-heaven/
+http://elasticdog.com/2013/08/developing-ansible-playbooks-for-arch-linux-with-vagrant/
+http://superuser.com/questions/745881/how-to-authenticate-to-a-vm-using-vagrant-up
+https://blog.engineyard.com/2014/building-a-vagrant-box
+https://techpunch.co.uk/development/high-availability-image-deployments-in-aws-using-ansible-and-packer
+
+#+BEGIN_SRC
+# build image with packer
+cd provision
+packer build provision/packer/ubuntu.json
+# copy created box to vagrant
+vagrant box add virtualbox-ubuntu1404 builds/virtualbox-ubuntu1404.box --force
+# startup vagrant
+cd ..;vagrant up
+#+END_SRC
+
+* Some issues
+** 'vagrant up' fails with 'mount: unknown filesystem type 'vboxsf''
+to fix:
+#+BEGIN_SRC
+vagrant plugin install vagrant-vbguest
+#+END_SRC
