--- a/README.org
+++ b/README.org
@@ -7,7 +7,9 @@
 A Vagrant VM provisioned with ansible. This VM uses standard Debian
 precise64 box. It could be used as a base box for certain dev projects
 as it has provisioning for some basic development tools, such as emacs, tmux, etc.
-
+* Install Guest Additions vagrant plugin
+vagrant plugin install vagrant-vbguest
+vagrant destroy && vagrant up
 * On startup the VM runs the ansible provision to install
 - essential build tools.
 - erlang
